<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/sealvar"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MFragment.ChatUserProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="SpeakableTextPresentCheck">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/UserImageLayout"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/userImage"
                android:layout_width="229dp"
                android:layout_height="219dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/userimage"
                app:riv_border_color="#333333"
                app:riv_border_width="2dip"
                app:riv_corner_radius="30dip"
                app:riv_oval="true"
                tools:ignore="ImageContrastCheck" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_below="@id/UserImageLayout"
                android:id="@+id/nameLayout"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/NameText"
                    android:paddingStart="15dp"
                    android:text="@string/name"
                    android:layout_marginTop="3dp"
                    android:layout_alignParentStart="true"
                    android:textSize="19sp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry" />
                <TextView
                    android:id="@+id/Name"
                    android:layout_marginTop="1dp"
                    android:textColor="@color/black"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/name"
                    android:textSize="22sp"
                    android:layout_below="@id/NameText"
                    android:paddingStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_below="@id/nameLayout"
                android:id="@+id/bioLayout"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/BioText"
                    android:paddingStart="15dp"
                    android:text="@string/bio"
                    android:layout_marginTop="3dp"
                    android:layout_alignParentStart="true"
                    android:textSize="19sp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry" />
                <TextView
                    android:id="@+id/Bio"
                    android:layout_marginTop="1dp"
                    android:textColor="@color/black"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/bio"
                    android:textSize="22sp"
                    android:layout_below="@id/BioText"
                    android:paddingStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_below="@id/bioLayout"
                android:id="@+id/HighlightLayout"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/highlightText"
                    android:paddingStart="15dp"
                    android:text="@string/highlight"
                    android:layout_marginTop="3dp"
                    android:layout_alignParentStart="true"
                    android:textSize="19sp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/Highlight"
                    android:layout_marginTop="2dp"
                    android:layout_below="@id/highlightText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>